Fixed carousel overflow

--- a/pages/on-demand/index.less
+++ b/pages/on-demand/index.less
@@ -20,11 +20,18 @@
         }
 
         .carousel-description {
-            font: 18px Roboto;
-            margin-top: 30px;
+            margin: 30px 0px 0px;
             width: 60%;
             color: #edd8cd;
             text-shadow: 0 3px 9px #00000066;
+            font: 18px Roboto;
+            word-wrap: break-word;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            text-align: justify;
+            display: -webkit-box;
+            -webkit-line-clamp: 6;
+            -webkit-box-orient: vertical;
             @media (max-width: @mobileLargeBP) {
                 width: 90%;
             }
